[project]
name = "pool_index"
version = "0.0.1"
description = "A pool ball detector."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
dependencies = [
  "numpy==1.26.3",
  "opencv-python==4.9.0.80 ",
  "matplotlib==3.8.2",
  "pytube==15.0.0"
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
